Referências e sites - Viabilidade Financeira

--- a/capitulos/section/viabilidade.tex
+++ b/capitulos/section/viabilidade.tex
@@ -37,7 +37,7 @@ Na \autoref{fig:prices-ec2}, seguem os preços dos planos Sob Demanda na região
 \begin{figure}[h]
   \centering
   \includegraphics[scale=0.6]{prices-ec2}
-  \caption{Preços do Amazon EC2 - Sob Demanda}
+  \caption{Preços do Amazon EC2 - Sob Demanda \\ \cite{AmazonEC2}}
   \label{fig:prices-ec2}
 \end{figure}
 
@@ -52,7 +52,7 @@ Na \autoref{fig:prices-rds}, seguem os preços dos planos Sob Demanda na região
 \begin{figure}[h]
   \centering
   \includegraphics[scale=0.6]{prices-rds}
-  \caption{Preços do Amazon RDS - Sob Demanda}
+  \caption{Preços do Amazon RDS - Sob Demanda \\ \cite{AmazonRDS}}
   \label{fig:prices-rds}
 \end{figure}	
 
@@ -61,5 +61,5 @@ Na \autoref{fig:prices-rds}, seguem os preços dos planos Sob Demanda na região
 Para gerar uma receita positiva a fim de obter lucro, haverá duas formas principais de retorno financeiro:
 \begin{itemize}
 	\item \underline{Cobrança do aplicativo}: O aplicativo estará disponível gratuitamente na PlayStore, não gerando, portanto, retorno financeiro.
-	\item \underline{Propaganda/Recomendação}: Será utilizado mediador de anuncio AdMob (responsável por conectar aplicações e anunciantes), onde o valor varia por visualizações de anúncios e cliques neles. Contudo, no próprio site do admob, é citado um caso no qual houve 300.000 downloads e recebia, através do AdMob, 100 USD por dia.
+	\item \underline{Propaganda/Recomendação}: Será utilizado mediador de anuncio AdMob (responsável por conectar aplicações e anunciantes), onde o valor varia por visualizações de anúncios e cliques neles. Contudo, no próprio site do admob, é citado um caso no qual houve 300.000 downloads e recebia, através do AdMob, 100 USD por dia. \cite{GoogleAdMob}
 \end{itemize}
