Sec:arquitetura fix typo

--- a/capitulos/section/arquitetura.tex
+++ b/capitulos/section/arquitetura.tex
@@ -30,7 +30,7 @@ A comunicação entre estes serviços será feita com o uso do protocolo
 \label{sig:https}\hyperlink{s:http}{HTTPS}, que permite a aplicação
 cliente realizar chamadas ao servidor através de urls, seja para
 buscar informações para apresentar ao usuário ou postar informações
-coletadas dele. O \gls{\gls{framework}} Spring, além de abstrair a implementação
+coletadas dele. O \gls{framework} Spring, além de abstrair a implementação
 da lógica de um servidor, implementa \emph{listeners} para estas urls,
 auxiliando a criação de pontos na aplicação do servidor focados na
 comunicação com a aplicação cliente.
