Adiciona página de revisão bibliográfica com as referências e siglas

--- a/capitulos/siglas.tex
+++ b/capitulos/siglas.tex
@@ -1,4 +1,10 @@
 \begin{siglas}
+	\item[SDK]\hypertarget{s:SDK} {Software Development Kit} ---
+  	Kit de desenvolvimento de software. Citado em \ref{sig:SDK}
+  \item[HTML]\hypertarget{s:HTML} {HyperText Markup Language} ---
+  	Linguagem de Marcação de Hipertexto. Citado em \ref{sig:HTML}
+  \item[CSS]\hypertarget{s:CSS} {Cascading Style Sheets} ---
+  	Folhas de Estilo em Cascata. Citado em \ref{sig:CSS}
   \item[API]\hypertarget{s:API}{Application Programming Interface} ---
     Interface de progragramação de Aplicação. Citado em \ref{sig:API}
   \item[HTTPS]\hypertarget{s:http}{Hypertext Transfer Protocol} ---
@@ -9,6 +15,7 @@
     de dados no qual o estado de um objeto é serializado e transferido
     entre aplicações. Citado em \ref{sig:rest}
    \item[ORM]\hypertarget{s:ORM}Object–relational mapping --- Mapeamento objeto-relacional. Citado em 		\ref{sig:ORM}
+   	
 \end{siglas}
 %%% Local Variables:
 %%% mode: latex
