--- a/referencias/referencias.bib
+++ b/referencias/referencias.bib
@@ -16,4 +16,61 @@
   year    = {2020},
 }
 
+@Article{Michaelis,
+	author  = {Editora Melhoramentos},
+	journal = {UOL},
+	title   = {Organização},
+	year    = {2021}
+}
+
+@Article{PlanejamentoFinanceiroFamiliar,
+	author  = {COLELLA, Mariana Trivia},
+	journal = {FAIT},
+	title   = {Planejamento Financeiro Familiar: A importância da organização e controle no orçamento familiar},
+	year    = {2015}
+}
+
+@Article{Towel,
+	author  = {CONLEY, Kenneth},
+	journal = {AAAI ORGANIZATION},
+	title   = {Towel: Towards an Intelligent To-Do List},
+	year = {2007}
+
+}
+
+@Article{GroceryList,
+	author  = {N Au, G Marsden,},
+	journal = {Macmillan Publishers Limited},
+	title   = {The cost-effectiveness of shopping to a predetermined grocery list to reduce overweight and obesity},
+	year = {2013}
+}
+
+@Article{ComprasNaoPlanejadas,
+	author  = {Angelo, Claudio},
+	journal = {Revista de Administração Contemporânea},
+	title   = {As compras não planejadas em supermercados: a importância do tempo e da organização da loja na determinação dos gastos},
+	year = {2003}
+}
+
+@Article{ComprasNaoPlanejadas,
+	author  = {Angelo, Claudio},
+	journal = {Revista de Administração Contemporânea},
+	title   = {As compras não planejadas em supermercados: a importância do tempo e da organização da loja na determinação dos gastos},
+	year = {2003}
+}
+
+@Article{Celular,
+	author  = {Graça Adjuto},
+	journal = {Agência Brasil},
+	title   = {Celular é o principal meio de acesso à internet no país},
+	year = {2018}
+}
+
+@Article{MobileApps,
+	author  = {Seung-Ho, Lim},
+	journal = {International Journal of Multimedia and Ubiquitous Engineering},
+	title   = {Experimental Comparison of Hybrid and Native Applications for Mobile Systems},
+	year = {2015}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
