Sec:equipe corrgir tabela e caption

--- a/capitulos/section/equipe.tex
+++ b/capitulos/section/equipe.tex
@@ -17,16 +17,23 @@ No Scrum, metodologia escolhida para o projeto, a definição de alguns papéis 
 Para uma divisão mais organizada e formal de tarefas, foi montada uma tabela de responsabilidades dos integrantes referentes aos tópicos de desenvolvimento do projeto.
 
 \begin{center}
-\begin{tabular}{|l|c|c|c|c|c|c|}
-\hline
-\multicolumn{1}{|c|}{\textbf{Atividade}} & \textbf{Alkindar}     & \textbf{Carolina}     & \textbf{Fabio}        & \textbf{Gabriely}     & \textbf{Leonardo}     & \textbf{Mariana}      \\ \hline
-Back-End                                 & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} \\ \hline
-Banco de dados                           & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} \\ \hline
-Blog                                     & x                     & x                     & x                     & x                     & x                     & x                     \\ \hline
-Documentação                             & x                     & x                     & x                     & x                     & x                     & x                     \\ \hline
-Front-End                                & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     \\ \hline
-Vídeos                                   & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     \\ \hline
-\end{tabular}
+  \begin{table}
+    \begin{tabular}{|l|c|c|c|c|c|c|}
+      \hline
+      \multicolumn{1}{|c|}{\textbf{Atividade}} & \textbf{Alkindar}     & \textbf{Carolina}     & \textbf{Fabio}        & \textbf{Gabriely}     & \textbf{Leonardo}     & \textbf{Mariana}      \\ \hline
+      Back-End                                 & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} \\ \hline
+      Banco de dados                           & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} \\ \hline
+      Blog                                     & x                     & x                     & x                     & x                     & x                     & x                     \\ \hline
+      Documentação                             & x                     & x                     & x                     & x                     & x                     & x                     \\ \hline
+      Front-End                                & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     \\ \hline
+      Vídeos                                   & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     & \multicolumn{1}{l|}{} & x                     \\ \hline
+    \end{tabular}
 
-\caption{Tabela de responsabilidades}\label{tab:tab_resp}
+    \caption{Tabela de responsabilidades}\label{tab:tab_resp}
+  \end{table}
 \end{center}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../desenho"
+%%% End:
