Sec:glossario inclir dados gaby

--- a/capitulos/glossario.tex
+++ b/capitulos/glossario.tex
@@ -37,6 +37,9 @@
   }
 }
 
+\newglossaryentry{daily}{
+  name={daily},
+  description={Cerimônia diária do Scrum, é uma reunião de geralmente 15 minutos com o objetivo de alinhar o que será feito no dia e se existe algum impedimento.}}
 
 \newglossaryentry{REST}{
   name={REST},
@@ -46,9 +49,22 @@
     o objeto pode ser reconstituído na aplicação que recebe o arquivo.}
 }
 
+\newglossaryentry{kanban}{
+  name={Kanban},
+  descriptio={Framework de gestão visual de fluxo de produção, que consiste no uso de cartões coloridos que separam as diferentes fases do desenvolvimento das tarefas (to do, doing, done).}
+}
+
+\newglossaryentry{scrum}{
+  name={Scrum},
+  description={Framework ágil utilizado em desenvolvimentos iterativos e incrementais.}}
+
+
 \newglossaryentry{framework}{
   name={framework},
-  description={Um conjunto de pacotes e bibliotecas que abstarai
+  description={
+    Conjunto de ações e estratégias que possuem um ojeto e objetivo em específico.
+
+    Na programação, é um conjunto de pacotes e bibliotecas que abstarai
     alguma função complexa, geralmente de nível mais baixo, e sobre o
     qual uma aplicação pdoe ser contruída. Ex: o framework web Spring
     asbtrai a lógica de implementação de um servidor, auxiliando a
