--- a/referencias/referencias.bib
+++ b/referencias/referencias.bib
@@ -47,7 +47,7 @@
 @Article{TDD,
   author  = {Mauricio Aniche},
   journal = {},
-  title   = {Test-Driven-Development},
+  title   = {Test Driven Development},
   year    = {2014},
   howpublished = {\url{https://tdd.caelum.com.br/}},
   notes   = {Acessado em 03 de junho de 2021}
