Arruma detalhes de ortogragia e referencias

--- a/capitulos/capa_contracapa.tex
+++ b/capitulos/capa_contracapa.tex
@@ -1,7 +1,7 @@
 % ---
 \titulo{
   \ABNTEXchapterfont\bfseries\LARGE Lixt\\
-  \ABNTEXchapterfont\mdseries\Large Desesenho da aplicação
+  \ABNTEXchapterfont\mdseries\Large Desenho da aplicação
 }
 \autor{Alkindar José Ferraz Rodrigues \\
   Carolina de Moraes Josephik \\
