--- a/capitulos/introducao.tex
+++ b/capitulos/introducao.tex
@@ -47,7 +47,8 @@ Entre os outros aplicativos analisados, é perceptível que não possuem todas a
 Ao analisar os aplicativos mais populares da categoria, constatamos que o \textit{Out Of Milk}, \textit{Bring!} e o \textit{OurGroceries}, que são destaques na área, não se propõem a exibir análise estatística das compras do usuário e nem manter um histórico do que foi comprado. A tabela \ref{tbl:concorrentes} permite visualizar melhor as diferenças entre os concorrentes.
 
 \label{tbl:concorrentes}
-\begin{center}
+\begin{table}[h]
+\centering
   \resizebox{\columnwidth}{!}{%
     \begin{tabular}{lccccccc}
       \hline
@@ -75,4 +76,4 @@ Ao analisar os aplicativos mais populares da categoria, constatamos que o \texti
     \end{tabular}
   }
   \caption{Tabela \ref{tbl:concorrentes}: Uma comparação dos aplicativos concorrentes.}
-\end{center}
+\end{table}
