--- a/referencias/referencias.bib
+++ b/referencias/referencias.bib
@@ -66,7 +66,7 @@
 }
 
 @Article{GroceryList,
-	author  = {N Au, G Marsden,},
+	author  = {N Au, G Marsden},
 	journal = {Macmillan Publishers Limited},
 	title   = {The cost-effectiveness of shopping to a predetermined grocery list to reduce overweight and obesity},
 	year = {2013}
