Arruma erros do Latex

--- a/capitulos/glossario.tex
+++ b/capitulos/glossario.tex
@@ -51,7 +51,7 @@
 
 \newglossaryentry{kanban}{
   name={Kanban},
-  descriptio={Framework de gestão visual de fluxo de produção, que consiste no uso de cartões coloridos que separam as diferentes fases do desenvolvimento das tarefas (to do, doing, done).}
+  description={Framework de gestão visual de fluxo de produção, que consiste no uso de cartões coloridos que separam as diferentes fases do desenvolvimento das tarefas (to do, doing, done).}
 }
 
 \newglossaryentry{scrum}{
@@ -63,13 +63,11 @@
   name={framework},
   description={
     Conjunto de ações e estratégias que possuem um ojeto e objetivo em específico.
-
     Na programação, é um conjunto de pacotes e bibliotecas que abstarai
     alguma função complexa, geralmente de nível mais baixo, e sobre o
     qual uma aplicação pdoe ser contruída. Ex: o framework web Spring
     asbtrai a lógica de implementação de um servidor, auxiliando a
-    criação de endpoints, rotas e processamento de HTTP.}
-}
+    criação de endpoints, rotas e processamento de HTTP.}}
 
 
 %%% Local Variables:
