sec:glossario add informações gaby

--- a/capitulos/glossario.tex
+++ b/capitulos/glossario.tex
@@ -50,25 +50,66 @@
 }
 
 \newglossaryentry{kanban}{
-  name={Kanban},
+  name={kanban},
   description={Framework de gestão visual de fluxo de produção, que consiste no uso de cartões coloridos que separam as diferentes fases do desenvolvimento das tarefas (to do, doing, done).}
 }
 
 \newglossaryentry{scrum}{
-  name={Scrum},
-  description={Framework ágil utilizado em desenvolvimentos iterativos e incrementais.}}
+  name={scrum},
+  description={Framework ágil utilizado em desenvolvimentos iterativos
+    e incrementais.}
+}
 
+\newglossaryentry{sprint}{
+  name={sprint},
+  description={Período de tempo limitado dentro do Scrum onde uma quantidade de histórias de usuário incrementáveis são desenvolvidas.}
+}
+
+\newglossaryentry{sprint-backlog}{
+  name={sprint backlog},
+  description={Lista das histórias de usuário que serão desenvolvidas durante a Sprint a ser iniciada.}
+}
+
+\newglossaryentry{product-backlog}{
+  name={product backlog},
+  description={ Lista de todos os requisitos e funcionalidades desejadas para um produto.}
+}
 
 \newglossaryentry{framework}{
   name={framework},
   description={
-    Conjunto de ações e estratégias que possuem um ojeto e objetivo em específico.
+    Conjunto de ações e estratégias que possuem um ojeto e objetivo em específico.\\
     Na programação, é um conjunto de pacotes e bibliotecas que abstarai
     alguma função complexa, geralmente de nível mais baixo, e sobre o
     qual uma aplicação pdoe ser contruída. Ex: o framework web Spring
     asbtrai a lógica de implementação de um servidor, auxiliando a
     criação de endpoints, rotas e processamento de HTTP.}}
 
+\newglossaryentry{planning}{
+  name={sprint planning},
+  description={Cerimônia do Scrum que ocorre antes do início
+    de uma nova Sprint com o objetivo de planejar quais histórias
+    de usuário serão desenvolvidas naquela iteração.
+  }
+}
+
+\newglossaryentry{review}{
+  name = {sprint review},
+  description= {
+    Cerimônia do Scrum que ocorre no fim da Sprint
+    com o objetivo de validar as entregas daquele período.
+  }
+}
+
+\newglossaryentry{retrospective}{
+  name = {sprint retrospective},
+  description = {
+    Cerimônia do Scrum que ocorre no fim da Sprint com
+    o objetivo de avaliar os pontos positivos e negativos
+    da Sprint, agrupando possibilidades de melhorias
+    para a próxima Sprint.
+  }
+}
 
 %%% Local Variables:
 %%% mode: latex
