--- a/capitulos/introducao.tex
+++ b/capitulos/introducao.tex
@@ -77,3 +77,7 @@ Ao analisar os aplicativos mais populares da categoria, constatamos que o \texti
   }
   \caption{Tabela \ref{tbl:concorrentes}: Uma comparação dos aplicativos concorrentes.}
 \end{table}
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../desenho"
+%%% End:
