🚧 Update escopo.tex and siglas.tex

--- a/capitulos/siglas.tex
+++ b/capitulos/siglas.tex
@@ -15,6 +15,10 @@
     de dados no qual o estado de um objeto é serializado e transferido
     entre aplicações. Citado em \ref{sig:rest}
    \item[ORM]\hypertarget{s:ORM}Object–relational mapping --- Mapeamento objeto-relacional. Citado em 		\ref{sig:ORM}
+   \item[MVP]\hypertarget{s:mvp}{\textit{Minimum Viable Product}} --- 
+  	Mínimo Produto Viável. Citado em \ref{sig:mvp}
+   \item[LGPD]\hypertarget{s:lgpd}{Lei Geral de Proteção de Dados}. --- 
+  	Citado em \ref{sig:lgpd}
    	
 \end{siglas}
 %%% Local Variables:
