Update do desenho

--- a/desenho.tex
+++ b/desenho.tex
@@ -27,6 +27,7 @@
 \usepackage{microtype}
 \usepackage{datatool}
 \usepackage[nopostdot]{glossaries}
+\usepackage{float}
 
 \usepackage[brazilian,hyperpageref]{backref}
 \usepackage[alf]{abntex2cite}
